--- a/src/shared/variables.scss
+++ b/src/shared/variables.scss
@@ -13,3 +13,4 @@ $max-desktop-width: 800px;
 $min-height: 300px;
 $home-width: 345px;
 $form-width: 268px;
+$hide-meta-width: 640px;
